2-VirtualService.yaml
---
kind: VirtualService
apiVersion: servicemesh.oci.oracle.com/v1beta1
metadata:
  name: ms-helloworldtls
  namespace: default
spec:
  mesh:
    ref:
      name: helloworldtls

  defaultRoutingPolicy:
    type: UNIFORM
  mtls:
#    mode: DISABLED
#    mode: PERMISSIVE
    mode: STRICT
  compartmentId: ocid1.compartment.oc1..aaaaaaaajp2gjl5ki2mhfnybw4foi2b7apv4khhyrkcjior23jsxbr47yvuq
  hosts:
    - helloworld-service-tls:8080
---
